--- a/01. PARTIE LEGISLATIVE/Article L3111-10 - 23083985.md
+++ b/01. PARTIE LEGISLATIVE/Article L3111-10 - 23083985.md
@@ -1,20 +1,15 @@
 # Article L3111-10
 
-La région et le département peuvent participer au financement des frais de transport individuel des élèves vers les
-établissements scolaires dont ils ont la charge.
+La région peut participer au financement des frais de transport individuel des élèves vers les établissements scolaires.
 
-Une convention avec le département ou l'autorité compétente pour l'organisation des transports scolaires prévoit les
-conditions de participation de la région ou du département au financement de ces transports scolaires.
+Une convention avec l'autorité compétente pour l'organisation des transports scolaires prévoit les conditions de
+participation de la région au financement de ces transports scolaires.
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°2015-991 du 7 août 2015 - art. 15 (V)
-
-	**Anciens textes**:
-
-	  - Code de l'éducation - art. L213-12-1 (Ab)
+	  - Loi n°2015-991 du 7 août 2015 - art. 15
 
 	**Cité par**:
 
