--- a/01. PARTIE LEGISLATIVE/Article L3111-7 - 23083991.md
+++ b/01. PARTIE LEGISLATIVE/Article L3111-7 - 23083991.md
@@ -2,11 +2,11 @@
 
 Les transports scolaires sont des services réguliers publics.
 
-Le département a la responsabilité de l'organisation et du fonctionnement de ces transports. Il consulte à leur sujet le
-conseil départemental de l'éducation nationale.
+La région a la responsabilité de l'organisation et du fonctionnement de ces transports. Elle consulte à leur sujet les
+conseils départementaux de l'éducation nationale intéressés. 
 
-L'autorité compétente de l'Etat consulte le département, dans des conditions fixées par voie réglementaire, avant toute
-décision susceptible d'entraîner une modification substantielle des besoins en matière de transports scolaires.
+L'autorité compétente de l'Etat consulte la région, dans des conditions fixées par voie réglementaire, avant toute décision
+susceptible d'entraîner une modification substantielle des besoins en matière de transports scolaires.
 
 Toutefois, à l'intérieur des périmètres de transports urbains existant au 1er septembre 1984, cette responsabilité est
 exercée par l'autorité compétente pour l'organisation de la mobilité.
@@ -26,7 +26,7 @@ décret en Conseil d'Etat.
 	  - Loi n°2014-789 du 10 juillet 2014 - art. 2 (V)
 	  - Code de l'éducation - art. L213-11 (VT)
 	  - Code de l'éducation - art. L214-18 (VD)
-	  - Code des transports - art. L3521-1 (V)
+	  - Code des transports - art. L3521-1 (VD)
 	  - Code des transports - art. R3111-16 (VD)
 	  - Code des transports - art. R3111-21 (VD)
 	  - Code des transports - art. R3111-28 (VD)
@@ -36,5 +36,9 @@ décret en Conseil d'Etat.
 
 	**Modifié par**:
 
+	  - Loi n°2015-991 du 7 août 2015 - art. 15
 	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
-	  - Loi n°2015-991 du 7 août 2015 - art. 15 (V)
+
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
