--- a/01. PARTIE LEGISLATIVE/Article L3111-8 - 23083989.md
+++ b/01. PARTIE LEGISLATIVE/Article L3111-8 - 23083989.md
@@ -2,12 +2,12 @@
 
 En cas de création d'un périmètre de transports urbains ou de modification d'un périmètre existant au 1er septembre 1984
 incluant les transports scolaires, une convention est passée entre l'autorité compétente pour l'organisation des transports
-urbains et le département. Cette convention fixe les conditions de financement des services de transports scolaires dans le
+urbains et la région. Cette convention fixe les conditions de financement des services de transports scolaires dans le
 nouveau périmètre.
 
 Les procédures d'arbitrage par l'autorité administrative compétente de l'Etat, en cas de litige, sont déterminées par décret
 en Conseil d'Etat. En ce qui concerne les modalités financières du transfert, cet arbitrage prend en compte le montant des
-dépenses effectuées par le département au titre des compétences transférées à l'autorité compétente pour l'organisation des
+dépenses effectuées par la région au titre des compétences transférées à l'autorité compétente pour l'organisation des
 transports urbains au cours de l'année scolaire précédant le transfert, de sorte que soit assurée la compensation intégrale
 des moyens nécessaires à l'exercice de la compétence transférée.
 
@@ -15,17 +15,13 @@ des moyens nécessaires à l'exercice de la compétence transférée.
 
 	**Modifié par**:
 
-	  - Loi n°2015-991 du 7 août 2015 - art. 15 (V)
+	  - Loi n°2015-991 du 7 août 2015 - art. 15
 
 	**Cité par**:
 
 	  - Décret n°2016-1550 du 17 novembre 2016 - art. 8 (V)
 	  - Code des transports - art. L3111-5 (V)
 	  - Code des transports - art. R3111-21 (VD)
-
-	**Anciens textes**:
-
-	  - Code de l'éducation - art. L213-11 (M), alinéas 5 et 6
 
 	**Codifié par**:
 
