--- a/01. PARTIE LEGISLATIVE/Article L3521-1 - 23083535.md
+++ b/01. PARTIE LEGISLATIVE/Article L3521-1 - 23083535.md
@@ -1,17 +1,17 @@
 # Article L3521-1
 
-Pour l'application de l'article L. 3111-7 à Mayotte, les mots : " le conseil départemental de l'éducation nationale " sont
-remplacés par les mots : " le conseil de la culture, de l'éducation et de l'environnement ".
+Pour l'application de l'article L. 3111-7 à Mayotte, les mots : " les conseils départementaux de l'éducation nationale
+intéressés " sont remplacés par les mots : " le conseil de la culture, de l'éducation et de l'environnement ".
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°2015-991 du 7 août 2015 - art. 15 (V)
+	  - Loi n°2015-991 du 7 août 2015 - art. 15
 
 	**Cite**:
 
-	  - Code des transports - art. L3111-7 (V)
+	  - Code des transports - art. L3111-7 (VD)
 
 	**Codifié par**:
 
