--- a/01. PARTIE LEGISLATIVE/Article L3111-9 - 23083987.md
+++ b/01. PARTIE LEGISLATIVE/Article L3111-9 - 23083987.md
@@ -1,20 +1,22 @@
 # Article L3111-9
 
-S'ils n'ont pas décidé de les prendre en charge eux-mêmes, le département ou l'autorité compétente pour l'organisation des
-transports urbains peuvent confier par convention tout ou partie de l'organisation des transports scolaires à des communes,
-établissements publics de coopération intercommunale, syndicats mixtes, établissements d'enseignement, associations de
-parents d'élèves et associations familiales. L'autorité compétente pour l'organisation des transports urbains peut également
-confier, par convention, tout ou partie de l'organisation des transports scolaires au département.
+Si elles n'ont pas décidé de la prendre en charge elles-mêmes, la région ou l'autorité compétente pour l'organisation des
+transports urbains peuvent confier par convention, dans les conditions prévues à l'article L. 1111-8 du code général des
+collectivités territoriales, tout ou partie de l'organisation des transports scolaires au département ou à des communes, des
+établissements publics de coopération intercommunale, des syndicats mixtes, des établissements d'enseignement ou des
+associations de parents d'élèves et des associations familiales. L'autorité compétente pour l'organisation des transports
+urbains peut également confier, dans les mêmes conditions, tout ou partie de l'organisation des transports scolaires à la
+région.
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°2015-991 du 7 août 2015 - art. 15 (V)
+	  - Loi n°2015-991 du 7 août 2015 - art. 15
 
-	**Anciens textes**:
+	**Cite**:
 
-	  - Code de l'éducation - art. L213-12 (M), alinéa 1
+	  - Code général des collectivités territoriales - art. L1111-8 (MMN)
 
 	**Cité par**:
 
