--- a/02. PARTIE REGLEMENTAIRE/Article R1802-8 - 33777556.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1802-8 - 33777556.md
@@ -17,10 +17,13 @@ instance et son président ;
 6° Les références au directeur départemental des territoires et de la mer, au directeur départemental ou interdépartemental
 des affaires maritimes, au directeur interrégional de la mer, au directeur régional des affaires maritimes ou au chef des
 services des affaires maritimes sont remplacées, selon les modalités d'organisation et les attributions des services chargés
-des activités maritimes, par des références au directeur ou chef de service compétent.
+des activités maritimes, par des références au directeur ou chef de service compétent ;
+
+7° Les références au code du travail sont remplacées par des références à la loi n° 52-1322 du 15 décembre 1952 instituant un
+code du travail dans les territoires et territoires associés relevant du ministère chargé de l'outre-mer.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2016-1893 du 28 décembre 2016 - art. 6
+	  - Décret n°2017-942 du 10 mai 2017 - art. 3 (V)
