--- a/02. PARTIE REGLEMENTAIRE/Article R5321-1 - 30031108.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5321-1 - 30031108.md
@@ -1,7 +1,8 @@
 # Article R5321-1
 
-Le droit de port est dû à raison des opérations commerciales ou des séjours des navires effectués dans le port. Les éléments
-constitutifs du droit de port comprennent, dans les conditions définies au présent code, les redevances suivantes :
+Le droit de port est dû à raison des opérations commerciales ou des séjours des navires et de leurs équipages effectués dans
+le port. Les éléments constitutifs du droit de port comprennent, dans les conditions définies au présent code, les redevances
+suivantes :
 
 1° Pour les navires de commerce :
 
@@ -21,19 +22,20 @@ e) Une redevance sur les déchets d'exploitation des navires ;
 agrément délivré par l'autorité maritime pour le transport de plus de douze passagers, une redevance sur les déchets
 d'exploitation des navires.
 
+**Nota:**
+
+Conformément au I de l'article 6 du décret n° 2017-423 du 28 mars 2017, ces dispositions sont applicables aux droits de port
+perçus à compter du 1er janvier 2018.
+
 **Liens relatifs à cet article**
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R*211-1 (Ab)
+	  - Décret n°2017-423 du 28 mars 2017 - art. 2
 
 	**Cité par**:
 
