--- a/02. PARTIE REGLEMENTAIRE/Article R5561-3 - 29338364.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5561-3 - 29338364.md
@@ -4,12 +4,25 @@ A défaut de présentation du document obligatoire spécifiant les effectifs min
 convention internationale pour la sauvegarde de la vie en mer du 1er novembre 1974 modifiée, les dispositions réglementaires
 prises pour l'application de l'article L. 5522-2 sont applicables.
 
+I.-Pour la délivrance de la fiche d'effectif minimal mentionnée au II. de l'article L. 5522-2, l'effectif du navire est fixé
+par l'armateur s'il n'a pas été déterminé au préalable par voie d'accord entre les parties intéressées ou leurs
+représentants. Il est soumis, par l'armateur, au visa de l'autorité mentionnée à l'article R. 5561-2 qui apprécie sa
+conformité aux règles relatives à la sécurité de la navigation et à la durée du travail. L'absence de décision expresse à
+l'issue d'un délai de deux mois vaut rejet de la demande de visa.
+
+II.-Si les conditions réelles d'exploitation du navire ne permettent pas d'assurer le respect des règles mentionnées à
+l'alinéa précédent, le visa est retiré.
+
+Tout recours contentieux contre cette décision doit être précédé d'un recours administratif préalable devant le préfet de
+région, qui statue dans le délai d'un mois à compter de la réception de la demande. Ce recours doit être présenté dans un
+délai de quatre mois à compter de la décision contestée.
+
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-881 du 1er août 2014 - art. 1
+	  - Décret n°2017-942 du 10 mai 2017 - art. 4
 
 	**Cite**:
 
-	  - Code des transports - art. L5522-2 (V)
+	  - Code des transports - art. L5522-2
