--- a/02. PARTIE REGLEMENTAIRE/Article R5792-1 - 32674926.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5792-1 - 32674926.md
@@ -1,27 +1,26 @@
 # Article R5792-1
 
-Le  titre VIII du livre II est applicable aux Terres australes et  antarctiques françaises sous réserve des adaptations
-suivantes : 
+Le titre III du livre II est applicable aux Terres australes et antarctiques françaises sous réserve des adaptations
+suivantes :
 
-1° La référence au directeur interrégional de la mer est remplacée par la référence au directeur de la mer Sud océan
-Indien ; 
+1° Les 1° et 6° de l'article R. 5232-1 sont supprimés ;
 
-2° La référence au directeur départemental des territoires et de la mer est supprimée.
+2° Aux articles R. 5232-13 et R. 5232-17, les mots : " conditions d'emploi portant sur le contrat d'engagement maritime, la
+durée du travail, le repos, les congés, le salaire et la santé et la sécurité au travail maritime mentionnées au titre IV et
+à l'obligation d'affiliation mentionnée au titre V du livre V " sont remplacés par les mots : " conditions d'emploi et de
+protection sociale mentionnées au chapitre V du titre IX du livre VII et à la loi n° 52-1322 du 15 décembre 1952, applicables
+sur les navires immatriculés au registre des Terres australes et antarctiques françaises " ;
+
+3° A l'article R. 5232-17, les mots : " prévues aux articles L. 5523-5, L. 5523-6, L. 5542-50 à L. 5542-56 et L. 5543-5 "
+sont remplacés par les mots : " prévues aux articles L. 5523-5, L. 5523-6, L. 5542-56, L. 5795-4-5 et L. 5795-6-14 en tant
+qu'il concerne le rapatriement ".
 
 **Liens relatifs à cet article**
-
-	**Créé par**:
-
-	  - Décret n°2016-761 du 8 juin 2016 - art. 2
-
-	**Liens**:
-
-	  - TRANSFERE: Décret n°2017-942 du 10 mai 2017 - art. 3 (V)
 
 	**Cité par**:
 
 	  - Décret n°2017-942 du 10 mai 2017 - art. 3 (V)
 
-	**Nouveaux textes**:
+	**Modifié par**:
 
-	  - Code des transports - art. R5792-2 (VD)
+	  - Décret n°2017-942 du 10 mai 2017 - art. 3 (V)
