--- a/01. PARTIE LEGISLATIVE/Article L5765-1 - 23078630.md
+++ b/01. PARTIE LEGISLATIVE/Article L5765-1 - 23078630.md
@@ -1,15 +1,683 @@
 # Article L5765-1
 
-Les articles L. 5511-1 à L. 5511-5, à l'exception du b du 3° de l'article L. 5511-1,  L. 5512-1 à L. 5512-4, L. 5513-1, L.
-5513-2, L. 5514-1, L. 5514-2, L. 5521-1 à L. 5521-4, L. 5522-2 à L. 5522-4, à l'exception du II de l'article L. 5522-3, L.
-5523-1 à L. 5523-6, 
-L. 5524-1 à L. 5524-4, L. 5531-1 à L. 5532-1, 
-L. 5533-2, L. 5533-4, L. 5542-21-1, L. 5544-14, L. 5545-3-1, les II et III de l'article L. 5549-1 et les articles L. 5571-1 à
-L. 5571-4 sont applicables en Nouvelle-Calédonie en tant qu'ils concernent les compétences exercées par l'Etat. 
+I. - Sont applicables en Nouvelle-Calédonie, en tant qu'elles  concernent les compétences exercées par l'Etat et sous réserve
+des  dispositions d'adaptations prévues au présent chapitre, les dispositions  des titres Ier à VII du livre V de la présente
+partie mentionnées dans  la colonne de gauche du tableau ci-après, dans leur rédaction indiquée  dans la colonne de droite du
+même tableau :
 
-Les articles L. 5511-1 à L. 5511-5, à l'exception du b du 3° de l'article L. 5511-1, L. 5512-1 à L. 5512-4, L. 5513-1, L.
-5513-2, L. 5514-1, L. 5514-2, L. 5521-4, L. 5531-1 à L. 5532-1, L. 5533-2, L. 5533-4, L. 5544-14, L. 5545-3-1 et L. 5571-1 à
-L. 5571-4, applicables aux marins, sont également applicables aux gens de mer autres que marins.
+<table>
+    <tbody>
+      <tr>
+        <th>
+
+DISPOSITIONS APPLICABLES 
+
+</th>
+        <th>
+
+DANS LEUR RÉDACTION 
+
+</th>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5511-1 à l'exception du b du 3° 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5511-2 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5511-3 et L. 5511-4 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2016-819 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5511-5 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5512-1 à L. 5512-4 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5513-1 et L. 5513-2 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5514-1 et L. 5514-2 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5521-1 et L. 5521-2 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5521-2-1 et L. 5521-3 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5521-4 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5522-2 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5522-3 à l'exception de son II 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5522-4 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5523-1 et L. 5523-2 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5523-3 et L. 5523-4 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de l'ordonnance n° 2012-1218 du 2 novembre 2012
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5523-5 et L. 5523-6 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5524-1 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5524-2 et L. 5524-3 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5524-3-1 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de l'ordonnance n° 2011-204 du 24 février 2011
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5524-4 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5531-1 à L. 5531-3 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5531-4 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5531-20 à L. 5531-28 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de l'ordonnance n° 2016-1686 du 8 décembre 2016
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L 5531-31 et L. 5531-32 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de l'ordonnance n° 2016-1686 du 8 décembre 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L 5531-34 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de l'ordonnancen° 2016-1686 du 8 décembre 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L 5531-36 à L 5531-42 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de l'ordonnance n° 2016-1686 du 8 décembre 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L5531-44 à L. 5531-49 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de l'ordonnance n° 2016-1686 du 8 décembre 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5532-1 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5533-2 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5533-4 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5542-21-1 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5544-14 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5545-3-1 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+Les II et III de L. 5549-1 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5571-1 à L. 5571-3 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5571-4 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+    </tbody>
+  </table>
+
+II. - Sous réserve des dispositions d'adaptations prévues au présent  chapitre, les dispositions des titres Ier à VII du
+livre V de la  présente partie applicables aux marins mentionnées dans la colonne de  gauche du tableau ci-après, dans leur
+rédaction indiquée dans la colonne  de droite du même tableau sont également applicables aux gens de mer  autres que marins :
+
+<table>
+    <tbody>
+      <tr>
+        <th>
+
+DISPOSITIONS APPLICABLES 
+
+</th>
+        <th>
+
+DANS LEUR RÉDACTION 
+
+</th>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5511-1 à l'exception du b du 3° 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5511-2 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5511-3 et L. 5511-4 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2016-819 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5511-5 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5512-1 à L. 5512-4 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5513-1 et L. 5513-2 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5514-1 et L. 5514-2 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5521-4 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5531-1 à L. 5531-3 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5531-4 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5532-1 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5533-2 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5533-4 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5544-14 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5545-3-1 
+
+</td>
+        <td valign="middle" align="justify">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5571-1 à L. 5571-3 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5571-4 
+
+</td>
+        <td align="justify" valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+    </tbody>
+  </table>
 
 **Liens relatifs à cet article**
 
@@ -17,26 +685,14 @@ L. 5571-4, applicables aux marins, sont également applicables aux gens de mer a
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
-	**Modifié par**:
-
-	  - Loi n°2016-816 du 20 juin 2016 - art. 47
-
 	**Cite**:
 
-	  - Code des transports - art. L5511-1
-	  - Code des transports - art. L5512-1
-	  - Code des transports - art. L5513-1
-	  - Code des transports - art. L5514-1
-	  - Code des transports - art. L5521-1
-	  - Code des transports - art. L5522-2
-	  - Code des transports - art. L5522-3
-	  - Code des transports - art. L5523-1
-	  - Code des transports - art. L5524-1
-	  - Code des transports - art. L5531-1
-	  - Code des transports - art. L5533-2
-	  - Code des transports - art. L5533-4
-	  - Code des transports - art. L5542-21-1
-	  - Code des transports - art. L5544-14
-	  - Code des transports - art. L5545-3-1
-	  - Code des transports - art. L5549-1
-	  - Code des transports - art. L5571-1
+	  - Ordonnance n°2011-204 du 24 février 2011
+	  - Ordonnance n°2012-1218 du 2 novembre 2012
+	  - Loi n°2013-619 du 16 juillet 2013
+	  - Loi n°2016-816 du 20 juin 2016
+	  - Ordonnance n°2016-1686 du 8 décembre 2016
+
+	**Modifié par**:
+
+	  - Ordonnance n°2016-1686 du 8 décembre 2016 - art. 5 (V)
